[project]
name = "wheelhouz"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pyetrade>=2.1",
    "yfinance>=0.2",
    "alpaca-py>=0.20",
    "python-telegram-bot>=21.0",
    "tradingview-ta>=3.3.0",
    "anthropic[bedrock]>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["yaml", "pyetrade", "alpaca.*", "yfinance", "telegram.*", "structlog"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
